manifests/rancher_prime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: rancher-ingress
 namespace: cattle-system
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - rancher.ccrow.org
   secretName: rancher-tls-secret
 rules:
 - host: rancher.ccrow.org
   http:
     paths:
     - backend:
         service:
           name: rancher
           port:
             number: 80
       path: /
       pathType: Prefix
